--- a/index3.html
+++ b/index3.html
@@ -2,7 +2,8 @@
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
-<body>
+<body> 
+
 
 <html>
 	<head>
@@ -49,8 +50,8 @@
 			}
 		</style>
 	</head>
-<body>
 
+<body> 
 <div class="row">
   <div class="column">
     <img src="northeasternphoto.JPG" alt="Snow" style="width:100%">
@@ -73,8 +74,9 @@
 
 
 <html>
+<body> 
   <style>
-    body {
+  	  {
         background: #9BB7D4}
     section {
         background: #E9897E;
@@ -86,6 +88,7 @@
         left: 50%;
         margin-right: -50%;
         transform: translate(-50%, -50%) }
+
   </style>
   <section>
     <h1>WHO IS BANKSY?</h1>
@@ -95,3 +98,12 @@
     	
   </section>
 
+<html>
+<head>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<style>
+<body>
+@media only screen and (max-width: 375px) 
+</style>
+</head>
+<body>
