--- a/index3.html
+++ b/index3.html
@@ -91,6 +91,7 @@
 
   </style>
   <section>
+  	<div class="static"> 
     <h1>WHO IS BANKSY?</h1>
     <p>Banksy is known to be an English-based street artist. He is famous for doing pieces in the streets of England and around the world. His works most famously focus on political and social issues in the world. Bansky’s first pieces can be traced back to the 1990’s where he began by painting train cars in Bristol, England. His style was quite unique as he chose to use stencils rather than my freehand. This method allows for him to be quick in his work. To this day, his identity in unknown leaving many people to question which works are his and which works are replicas. 
     <h2>BANKSY AT NORTHEASTERN?</h2>
